# SIR-benchmark

./: .gitignore  README.md  benchmark.sh  comparison_figure.ipynb  generate_networks.sh  generate_random_graph.py
PH_event-driven/: Makefile  README  gen_er.py  gen_pow.py  sir.c  sir.h  test_er.py  test_pow.py  test_prostitution.py
gillespie_composition-rejection/: CMakeLists.txt
gillespie_composition-rejection/src/: threshold_SIR.cpp  time_SIR.cpp
